--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-Data\Matlab Code\F1_threshold01
-Data\Matlab Code\F1_threshold02
-Data\Matlab Code\SEG1
+Data/Matlab Code/F1_threshold01
+Data/Matlab Code/F1_threshold02
+Data/Matlab Code/SEG1
